# differential-drive-robot

./: .gitignore
src/ddbot_controller/: CMakeLists.txt  package.xml
src/ddbot_controller/include/ddbot_controller/: discrete_algebraic_riccati_equation.hpp  linear_quadratic_regulator.cpp  linear_quadratic_regulator.hpp
src/ddbot_controller/src/: controller_action_client.cpp  controller_action_server.cpp
src/ddbot_msgs/: CMakeLists.txt  package.xml
src/ddbot_msgs/action/: FollowPath.action  TrackTrajectory.action
src/ddbot_msgs/msg/: TrajectoryPointStamped.msg
src/ddbot_msgs/srv/: GetTrajectory.srv
src/ddbot_planner/: package.xml  setup.cfg  setup.py
src/ddbot_planner/ddbot_planner/: diff_drive_planner.py  planner_client.py  planner_service.py
src/planner/: package.xml  setup.py
src/planner/planner/: piecewise_polynomial.py  planner_client.py  test_planner.py
src/robotino_autonomy/: CMakeLists.txt  package.xml
src/robotino_autonomy/src/: autonomy.cpp
src/robotino_bringup/: CMakeLists.txt  package.xml
src/robotino_bringup/ignition/: robotino_empty.ign
src/robotino_bringup/launch/: robotino.launch.py
src/robotino_control/: CMakeLists.txt  package.xml
src/robotino_control/include/robotino_control/: discrete_algebraic_riccati_equation.cc  discrete_algebraic_riccati_equation.h  linear_quadratic_regulator.cc  linear_quadratic_regulator.h
src/robotino_control/src/: control_action_client.cpp  control_action_server.cpp
src/robotino_controller/: CMakeLists.txt  package.xml
src/robotino_controller/include/robotino_controller/: discrete_algebraic_riccati_equation.cpp
src/robotino_controller/src/: controller_action_client.cpp  controller_action_server.cpp
src/robotino_description/: CMakeLists.txt  package.xml
src/robotino_description/urdf/: robotino.urdf  robotino.urdf.xacro  robotino_body.urdf.xacro  robotino_parts.urdf.xacro  robotino_platform.urdf  robotino_platform.urdf.xacro  robotino_platform_kinect.urdf.xacro
src/robotino_msgs/: CMakeLists.txt  package.xml
src/robotino_msgs/action/: TrackTrajectory.action
src/robotino_msgs/srv/: GetTrajectory.srv
src/robotino_planner/: package.xml  setup.cfg  setup.py
src/robotino_planner/robotino_planner/: planner_client.py  planner_service.py
src/robotino_planning/: package.xml  setup.cfg  setup.py
src/robotino_planning/robotino_planning/: diff_drive_planner.py  piecewise_polynomial.py  planning_client.py  planning_service.py  test_planning.py
src/robotino_planning/test/: planner_example.py
