<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robotino_planner</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="calvin3h@gmail.com">chub</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>python-numpy</depend>
  <depend>python-cvxpy-pip</depend>
  <depend>python-transforms3d-pip</depend>
  <depend>python-gurobipy-pip</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>robotino_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
